# framework.appfw.appfw-env

./: CMakeLists.txt  appfw-env.manifest  appfw-env.pc.in
include/: appfw_env.h
packaging/: appfw-env.spec
src/: appfw_env.c
