CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(appfw-env C)

SET(PROJECT_NAME "appfw-env")
SET(PREFIX ${CMAKE_INSTALL_PREFIX})
SET(INCLUDERID "${PREFIX}/include")
SET(CMAKE_SKIP_BUILD_RPATH true)

SET(SRCS
	src/appfw_env.c
)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)

## CFLAGS
SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} -fvisibility=hidden")
SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} -g -Wall")
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS}")

ADD_LIBRARY(${PROJECT_NAME} SHARED ${SRCS})
SET_TARGET_PROPERTIES(${PROJECT_NAME}
	PROPERTIES
	VERSION ${VERSION}
	SOVERSION ${VERSION_MAJOR}
)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${libpkgs_LDFLAGS})

CONFIGURE_FILE(${CMAKE_SOURCE_DIR}/${PROJECT_NAME}.pc.in ${CMAKE_SOURCE_DIR}/${PROJECT_NAME}.pc @ONLY)

INSTALL(TARGETS ${PROJECT_NAME} DESTINATION ${LIB_INSTALL_DIR} COMPONENT RuntimeLibraries)
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/include/appfw_env.h DESTINATION include)
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}.pc DESTINATION ${LIB_INSTALL_DIR}/pkgconfig)
